apps/agentgateway/base/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agentgateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: agentgateway
      app.kubernetes.io/name: agentgateway
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: agentgateway
        app.kubernetes.io/name: agentgateway
    spec:
      containers:
        - name: agentgateway
          image: agentgateway
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 30
            timeoutSeconds: 5
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 10
            timeoutSeconds: 5
          startupProbe:
            failureThreshold: 180
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 5
            timeoutSeconds: 5
