apps/agentgateway/base/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: agentgateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: agentgateway
      app.kubernetes.io/name: agentgateway
  serviceName: agentgateway
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: agentgateway
        app.kubernetes.io/name: agentgateway
    spec:
      containers:
        - name: agentgateway
          image: agentgateway
          args:
            - run
            - --replace
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 30
            timeoutSeconds: 5
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 10
            timeoutSeconds: 5
          startupProbe:
            failureThreshold: 180
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 5
            timeoutSeconds: 5
          volumeMounts:
            - name: data
              mountPath: /opt/data
      securityContext:
        fsGroup: 10000
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        resources:
          requests:
            storage: 1Gi
        accessModes:
          - ReadWriteOnce
