apps/agentgateway/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: agentgateway
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    app.kubernetes.io/instance: agentgateway
    app.kubernetes.io/name: agentgateway
