apps/agentgateway/base/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: agentgateway
spec:
  ingress:
    - ports:
        - port: http
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: agentgateway
      app.kubernetes.io/name: agentgateway
  policyTypes:
    - Ingress
